--- a/AutoMall/ViewControllers/Mall/CommodityListVC.xib
+++ b/AutoMall/ViewControllers/Mall/CommodityListVC.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -25,6 +25,15 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsVerticalScrollIndicator="NO" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="4A8-Jh-Jt6">
+                    <rect key="frame" x="0.0" y="40" width="375" height="627"/>
+                    <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.93725490199999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="separatorColor" red="0.92156862750000001" green="0.92156862750000001" blue="0.92156862750000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="km0-mO-tyA"/>
+                        <outlet property="delegate" destination="-1" id="CaN-15-ec1"/>
+                    </connections>
+                </tableView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="exI-u0-wTL">
                     <rect key="frame" x="0.0" y="64" width="375" height="40"/>
                     <subviews>
@@ -155,27 +164,18 @@
                         </mask>
                     </variation>
                 </view>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsVerticalScrollIndicator="NO" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="4A8-Jh-Jt6">
-                    <rect key="frame" x="0.0" y="104" width="375" height="563"/>
-                    <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.93725490199999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <color key="separatorColor" red="0.92156862750000001" green="0.92156862750000001" blue="0.92156862750000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <connections>
-                        <outlet property="dataSource" destination="-1" id="km0-mO-tyA"/>
-                        <outlet property="delegate" destination="-1" id="CaN-15-ec1"/>
-                    </connections>
-                </tableView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="4A8-Jh-Jt6" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="40" id="Q7d-CO-Wjg"/>
                 <constraint firstItem="4A8-Jh-Jt6" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="R83-IF-poH"/>
                 <constraint firstAttribute="trailing" secondItem="4A8-Jh-Jt6" secondAttribute="trailing" id="UKi-uU-noD"/>
                 <constraint firstAttribute="trailing" secondItem="exI-u0-wTL" secondAttribute="trailing" id="aDd-Pz-2No"/>
-                <constraint firstItem="4A8-Jh-Jt6" firstAttribute="top" secondItem="exI-u0-wTL" secondAttribute="bottom" id="aZw-si-wQi"/>
                 <constraint firstAttribute="bottom" secondItem="4A8-Jh-Jt6" secondAttribute="bottom" id="dks-2U-qhe"/>
                 <constraint firstItem="exI-u0-wTL" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="saD-cc-Znm"/>
                 <constraint firstItem="exI-u0-wTL" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="vhI-0U-XFn"/>
             </constraints>
-            <point key="canvasLocation" x="-749" y="67"/>
+            <point key="canvasLocation" x="-387" y="57"/>
         </view>
     </objects>
     <resources>
