--- a/AutoMall/ViewControllers/Upkeep/CheckResultMultiCell.xib
+++ b/AutoMall/ViewControllers/Upkeep/CheckResultMultiCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -28,29 +28,26 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="刮条老化" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4IM-QY-Rc4">
-                        <rect key="frame" x="76" y="8" width="65.5" height="19.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                        <rect key="frame" x="76" y="9" width="61.5" height="18"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrows" translatesAutoresizingMaskIntoConstraints="NO" id="sVV-BI-hEO">
-                        <rect key="frame" x="302" y="8" width="10" height="18"/>
+                        <rect key="frame" x="304" y="10" width="8" height="13"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="18" id="2Hp-Ox-hrP"/>
-                            <constraint firstAttribute="width" constant="10" id="hCs-0F-Ob4"/>
+                            <constraint firstAttribute="height" constant="13" id="2Hp-Ox-hrP"/>
+                            <constraint firstAttribute="width" constant="8" id="hCs-0F-Ob4"/>
                         </constraints>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jqZ-xn-Jxo">
-                        <rect key="frame" x="76" y="35.5" width="236" height="162.5"/>
+                        <rect key="frame" x="76" y="43" width="236" height="155"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="162.5" id="VBM-fI-BjI"/>
-                        </constraints>
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="sVV-BI-hEO" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="3D1-7c-zfh"/>
-                    <constraint firstItem="jqZ-xn-Jxo" firstAttribute="top" secondItem="4IM-QY-Rc4" secondAttribute="bottom" constant="8" id="7TA-ux-Bsd"/>
+                    <constraint firstItem="sVV-BI-hEO" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="3D1-7c-zfh"/>
+                    <constraint firstItem="jqZ-xn-Jxo" firstAttribute="top" secondItem="4IM-QY-Rc4" secondAttribute="bottom" constant="16" id="7TA-ux-Bsd"/>
                     <constraint firstAttribute="trailing" secondItem="jqZ-xn-Jxo" secondAttribute="trailing" constant="8" id="7f3-R0-nBq"/>
                     <constraint firstItem="vQh-Zo-rAt" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="89f-dL-Zu8"/>
                     <constraint firstItem="4IM-QY-Rc4" firstAttribute="leading" secondItem="vQh-Zo-rAt" secondAttribute="trailing" constant="8" id="HIE-Fi-wmp"/>
@@ -65,9 +62,8 @@
                 <outlet property="checkContentL" destination="4IM-QY-Rc4" id="Upo-jh-HAj"/>
                 <outlet property="positionL" destination="vQh-Zo-rAt" id="NLL-j9-I4x"/>
                 <outlet property="positionView" destination="jqZ-xn-Jxo" id="pny-fC-j6E"/>
-                <outlet property="positionViewHeightCon" destination="VBM-fI-BjI" id="ckP-Tk-H6z"/>
             </connections>
-            <point key="canvasLocation" x="-278" y="56"/>
+            <point key="canvasLocation" x="-20" y="52"/>
         </tableViewCell>
     </objects>
     <resources>
