--- a/AutoMall/ViewControllers/Upkeep/CheckResultSingleCell.xib
+++ b/AutoMall/ViewControllers/Upkeep/CheckResultSingleCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -28,19 +28,19 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="太阳纹/洗车纹" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="504-d1-Uln">
-                        <rect key="frame" x="76" y="12" width="103.5" height="19.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                        <rect key="frame" x="76" y="13" width="97" height="18"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="数值" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cmA-Pj-htw">
-                        <rect key="frame" x="191.5" y="12" width="33" height="19.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                        <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
+                        <rect key="frame" x="202" y="13.5" width="29" height="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" red="0.24705882352941178" green="0.24705882352941178" blue="0.24705882352941178" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="正常" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ME0-0V-oMV">
-                        <rect key="frame" x="244" y="11" width="50" height="22"/>
+                        <rect key="frame" x="246" y="11" width="50" height="22"/>
                         <color key="backgroundColor" red="0.0" green="0.65098039220000004" blue="0.23137254900000001" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="22" id="MCK-xU-aqr"/>
@@ -51,10 +51,10 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrows" translatesAutoresizingMaskIntoConstraints="NO" id="Ltq-wW-zlb">
-                        <rect key="frame" x="302" y="13" width="10" height="18"/>
+                        <rect key="frame" x="304" y="15.5" width="8" height="13"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="10" id="P8m-IJ-161"/>
-                            <constraint firstAttribute="height" constant="18" id="hoa-Fi-CUl"/>
+                            <constraint firstAttribute="width" constant="8" id="P8m-IJ-161"/>
+                            <constraint firstAttribute="height" constant="13" id="hoa-Fi-CUl"/>
                         </constraints>
                     </imageView>
                 </subviews>
@@ -66,8 +66,8 @@
                     <constraint firstItem="o44-19-bAd" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="OBc-za-YzZ"/>
                     <constraint firstItem="o44-19-bAd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="OzL-Ce-qt3"/>
                     <constraint firstItem="Ltq-wW-zlb" firstAttribute="leading" secondItem="ME0-0V-oMV" secondAttribute="trailing" constant="8" id="TaK-JG-wsJ"/>
-                    <constraint firstItem="cmA-Pj-htw" firstAttribute="leading" secondItem="504-d1-Uln" secondAttribute="trailing" constant="12" id="df3-5R-rdD"/>
                     <constraint firstAttribute="trailing" secondItem="Ltq-wW-zlb" secondAttribute="trailing" constant="8" id="eBh-Ar-YLd"/>
+                    <constraint firstItem="ME0-0V-oMV" firstAttribute="leading" secondItem="cmA-Pj-htw" secondAttribute="trailing" constant="15" id="fm3-fJ-XLG"/>
                     <constraint firstItem="cmA-Pj-htw" firstAttribute="centerY" secondItem="504-d1-Uln" secondAttribute="centerY" id="iew-ES-z8h"/>
                 </constraints>
             </tableViewCellContentView>
@@ -77,7 +77,7 @@
                 <outlet property="positionL" destination="o44-19-bAd" id="f2I-se-rJ5"/>
                 <outlet property="resultL" destination="cmA-Pj-htw" id="hVU-92-q8t"/>
             </connections>
-            <point key="canvasLocation" x="-296" y="25"/>
+            <point key="canvasLocation" x="-74" y="42"/>
         </tableViewCell>
     </objects>
     <resources>
