--- a/AutoMall/ViewControllers/Upkeep/CheckResultTechnicianCell.xib
+++ b/AutoMall/ViewControllers/Upkeep/CheckResultTechnicianCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -11,28 +11,28 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="checkResultTechnicianCell" rowHeight="60" id="KGk-i7-Jjw" customClass="CheckResultTechnicianCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="checkResultTechnicianCell" rowHeight="70" id="KGk-i7-Jjw" customClass="CheckResultTechnicianCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="59.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="69.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default" translatesAutoresizingMaskIntoConstraints="NO" id="2ej-f0-h2k">
-                        <rect key="frame" x="8" y="7.5" width="45" height="45"/>
+                        <rect key="frame" x="8" y="12.5" width="45" height="45"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="45" id="cxN-ge-Zko"/>
                             <constraint firstAttribute="width" constant="45" id="lwv-eQ-3F9"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="高级技师" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j7X-Wb-dTv">
-                        <rect key="frame" x="61" y="8" width="65.5" height="19.5"/>
+                        <rect key="frame" x="61" y="12" width="65.5" height="19.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5年汽车修理经验，熟悉汽车原理" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JbL-68-8lT">
-                        <rect key="frame" x="61" y="33.5" width="208.5" height="17"/>
+                        <rect key="frame" x="61" y="37.5" width="208.5" height="17"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -40,14 +40,14 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="JbL-68-8lT" firstAttribute="top" secondItem="j7X-Wb-dTv" secondAttribute="bottom" constant="6" id="APB-zN-djW"/>
-                    <constraint firstItem="j7X-Wb-dTv" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="DkW-DA-XU2"/>
+                    <constraint firstItem="j7X-Wb-dTv" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="DkW-DA-XU2"/>
                     <constraint firstItem="2ej-f0-h2k" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="cJh-jP-DKs"/>
                     <constraint firstItem="j7X-Wb-dTv" firstAttribute="leading" secondItem="2ej-f0-h2k" secondAttribute="trailing" constant="8" id="dew-EL-JX6"/>
                     <constraint firstItem="JbL-68-8lT" firstAttribute="leading" secondItem="2ej-f0-h2k" secondAttribute="trailing" constant="8" id="fiu-Fi-Nwi"/>
                     <constraint firstItem="2ej-f0-h2k" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="vt7-5X-i0D"/>
                 </constraints>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="25" y="60"/>
+            <point key="canvasLocation" x="25" y="65"/>
         </tableViewCell>
     </objects>
     <resources>
