--- a/AutoMall/ViewControllers/Upkeep/ShopInfoCell.xib
+++ b/AutoMall/ViewControllers/Upkeep/ShopInfoCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -11,63 +11,63 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="shopInfoCell" rowHeight="60" id="KGk-i7-Jjw" customClass="ShopInfoCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="shopInfoCell" rowHeight="70" id="KGk-i7-Jjw" customClass="ShopInfoCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="69.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholderPictureSquare" translatesAutoresizingMaskIntoConstraints="NO" id="4pK-wf-j1V">
-                        <rect key="frame" x="8" y="8" width="17" height="17"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="store_name" translatesAutoresizingMaskIntoConstraints="NO" id="4pK-wf-j1V">
+                        <rect key="frame" x="8" y="12" width="17" height="17"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="17" id="6AX-L9-owm"/>
                             <constraint firstAttribute="width" constant="17" id="hq5-t7-2xh"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="五菱汽车维修服务中心" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2M4-fa-KUG">
-                        <rect key="frame" x="30" y="7.5" width="153" height="18"/>
+                        <rect key="frame" x="30" y="11.5" width="153" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="storeAddress" translatesAutoresizingMaskIntoConstraints="NO" id="n7W-zN-CyZ">
-                        <rect key="frame" x="191" y="8" width="17" height="17"/>
+                        <rect key="frame" x="191" y="12" width="17" height="17"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="17" id="6l4-QD-C97"/>
                             <constraint firstAttribute="width" constant="17" id="R8U-UF-Zx1"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="020-3400000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mU8-R2-ISD">
-                        <rect key="frame" x="213" y="8" width="99" height="18"/>
+                        <rect key="frame" x="213" y="12" width="99" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholderPictureSquare" translatesAutoresizingMaskIntoConstraints="NO" id="ocg-82-Hlu">
-                        <rect key="frame" x="8" y="34.5" width="17" height="17"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="store_phone" translatesAutoresizingMaskIntoConstraints="NO" id="ocg-82-Hlu">
+                        <rect key="frame" x="8" y="40.5" width="17" height="17"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="17" id="Zny-ZP-aMj"/>
                             <constraint firstAttribute="height" constant="17" id="bDb-7o-10r"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="五菱汽车维修服务中心地址" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lEC-EH-DDr">
-                        <rect key="frame" x="30" y="35.5" width="159.5" height="16"/>
+                        <rect key="frame" x="30" y="41.5" width="159.5" height="16"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="ocg-82-Hlu" secondAttribute="bottom" constant="8" id="5e2-17-wft"/>
+                    <constraint firstAttribute="bottom" secondItem="ocg-82-Hlu" secondAttribute="bottom" constant="12" id="5e2-17-wft"/>
                     <constraint firstItem="lEC-EH-DDr" firstAttribute="leading" secondItem="ocg-82-Hlu" secondAttribute="trailing" constant="5" id="Lk1-YT-8e8"/>
-                    <constraint firstItem="mU8-R2-ISD" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="PYm-19-Gbx"/>
+                    <constraint firstItem="mU8-R2-ISD" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="PYm-19-Gbx"/>
                     <constraint firstItem="ocg-82-Hlu" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="QyB-aU-uGH"/>
                     <constraint firstAttribute="trailing" secondItem="mU8-R2-ISD" secondAttribute="trailing" constant="8" id="WKw-LX-k1e"/>
                     <constraint firstItem="2M4-fa-KUG" firstAttribute="centerY" secondItem="4pK-wf-j1V" secondAttribute="centerY" id="gtC-mP-4Aa"/>
                     <constraint firstItem="mU8-R2-ISD" firstAttribute="leading" secondItem="n7W-zN-CyZ" secondAttribute="trailing" constant="5" id="mQI-RH-zM0"/>
                     <constraint firstItem="mU8-R2-ISD" firstAttribute="centerY" secondItem="n7W-zN-CyZ" secondAttribute="centerY" id="pHt-DY-Kcj"/>
-                    <constraint firstItem="4pK-wf-j1V" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="r93-LG-yGh"/>
+                    <constraint firstItem="4pK-wf-j1V" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="r93-LG-yGh"/>
                     <constraint firstItem="2M4-fa-KUG" firstAttribute="leading" secondItem="4pK-wf-j1V" secondAttribute="trailing" constant="5" id="uop-MB-h46"/>
                     <constraint firstItem="lEC-EH-DDr" firstAttribute="centerY" secondItem="ocg-82-Hlu" secondAttribute="centerY" id="wbZ-7I-B7c"/>
                     <constraint firstItem="4pK-wf-j1V" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="zeB-yJ-J46"/>
@@ -78,11 +78,12 @@
                 <outlet property="storeNameL" destination="2M4-fa-KUG" id="HXf-5C-f40"/>
                 <outlet property="storePhoneL" destination="mU8-R2-ISD" id="HRv-k5-6ma"/>
             </connections>
-            <point key="canvasLocation" x="-258" y="11"/>
+            <point key="canvasLocation" x="-26" y="9"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="placeholderPictureSquare" width="302" height="302"/>
         <image name="storeAddress" width="40" height="40"/>
+        <image name="store_name" width="28" height="28"/>
+        <image name="store_phone" width="28" height="28"/>
     </resources>
 </document>
