--- a/AutoMall/ViewControllers/Upkeep/ResultCheckContentDetailCell.xib
+++ b/AutoMall/ViewControllers/Upkeep/ResultCheckContentDetailCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -56,7 +56,7 @@
                 <outlet property="levelL" destination="YLe-2d-4RG" id="CrR-LE-5AL"/>
                 <outlet property="resultL" destination="MQC-Kd-0YE" id="UY8-1t-eQl"/>
             </connections>
-            <point key="canvasLocation" x="-289" y="6"/>
+            <point key="canvasLocation" x="-36" y="-15"/>
         </tableViewCell>
     </objects>
 </document>
